La til flere endepunkter

--- a/NetCoreApi/NetCoreApi/appsettings.json
+++ b/NetCoreApi/NetCoreApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "connectionString": "Data Source=employee.db"
+  }
 }
