--- a/NetCoreApi/NetCoreApi/NetCoreApi.csproj
+++ b/NetCoreApi/NetCoreApi/NetCoreApi.csproj
@@ -6,10 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="LiteDB" Version="4.1.4" />
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.4" />
     </ItemGroup>
 
 </Project>
