la db config inn i appsettings.json

--- a/NetCoreApi/NetCoreApi/appsettings.json
+++ b/NetCoreApi/NetCoreApi/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "connectionString": "Data Source=employee.db"
+    "connectionString": "c:\\temp\\MyData.db"
   }
 }
