--- a/api-spec/employeeApi-1.0.yaml
+++ b/api-spec/employeeApi-1.0.yaml
@@ -1,10 +1,13 @@
-openapi: 3.0.0
+swagger: '2.0'
 info:
   description: Sonat employee api
   version: "1.0.0"
   title: Sonat employee
-tags:
-  - name: Employee
+
+basePath: /v1
+
+consumes:
+  - application/json
 
 paths:
   /employees:
@@ -15,32 +18,38 @@ paths:
       operationId: getEmployees
       responses:
         200:
-          description: successful
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Employee'
-        
+          description: A list of advisors
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Employee'
     post:
       tags:
         - Employee
       summary: Add a new employee
       operationId: addEmployee
+      parameters:
+        - in: body
+          name: employee
+          required: true
+          schema:
+            $ref: '#/definitions/Employee'
       responses:
         201:
-          description: Created
+          $ref: '#/responses/CreateEmployeeResponse'
         400:
           description: Bad request
-      requestBody:
-        $ref: '#/components/requestBodies/Employee'
-    
     put:
       tags:
         - Employee
       summary: Update an existing employee
       operationId: updateEmployee
+      parameters:
+        - in: body
+          name: branch
+          required: true
+          schema:
+            $ref: '#/definitions/Employee'
       responses:
         204:
           description: No content
@@ -48,10 +57,8 @@ paths:
           description: Bad request
         404:
           description: Employee not found
-      requestBody:
-        $ref: '#/components/requestBodies/Employee'
-  
-  '/employees/{employeeId}':
+
+  '/employees/{id}':
     get:
       tags:
         - Employee
@@ -59,20 +66,14 @@ paths:
       description: Returns a single employee
       operationId: getEmployeeById
       parameters:
-        - name: employeeId
-          in: path
-          description: ID of employee to return
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - $ref: '#/parameters/idParam'
       responses:
         200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Employee'
+          description: Employee
+          schema:
+            type: object
+            items:
+              $ref: '#/definitions/Employee'
         400:
           description: Invalid ID supplied
         404:
@@ -84,13 +85,7 @@ paths:
       summary: Delete an employee
       operationId: deleteEmployee
       parameters:
-        - name: employeeId
-          in: path
-          description: Employee id to delete
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - $ref: '#/parameters/idParam'
       responses:
         204:
           description: No content
@@ -99,29 +94,45 @@ paths:
         404:
           description: Employee not found
   
-components:
-  schemas:
-    Employee:
+tags:
+  - name: Employee
+parameters:
+  idParam:
+    in: path
+    name: id
+    type: integer
+    required: true
+    x-example: 123
+
+responses:
+  CreateEmployeeResponse:
+    description: Created an Advisor
+    schema:
+      $ref: '#/definitions/Id'
+
+definitions:
+  Employee:
       type: object
       required:
         - id
-        - firstName
-        - lastName
+        - firstname
+        - surname
       properties:
         id:
           type: integer
           format: int64
-        firstName:
+        firstname:
           type: string
           example: Espen
-        lastName:
+        surname:
           type: string
           example: Kvalheim
-  requestBodies:
-    Employee:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Employee'
-      description: Employee object
-      required: true
+  Id:
+    type: object
+    required:
+      - id
+    properties:
+      id:
+        type: integer
+        description: The id
+        example: 123
