--- a/api-spec/employeeApi-1.0.yaml
+++ b/api-spec/employeeApi-1.0.yaml
@@ -116,7 +116,7 @@ definitions:
       required:
         - id
         - firstname
-        - surname
+        - lastname
       properties:
         id:
           type: integer
@@ -124,7 +124,7 @@ definitions:
         firstname:
           type: string
           example: Espen
-        surname:
+        lastname:
           type: string
           example: Kvalheim
   Id:
