--- a/NetCoreApi/NetCoreApi/NetCoreApi.csproj
+++ b/NetCoreApi/NetCoreApi/NetCoreApi.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="LiteDB" Version="4.1.4" />
         <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.2" />
