--- a/NodeApi/package.json
+++ b/NodeApi/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
